@@ -59,12 +59,12 @@ p, li { white-space: pre-wrap; }
     <message>
         <location filename="../src/extracontrols.cpp" line="234"/>
         <source>System Exclusive File</source>
-        <translation type="unfinished"></translation>
+        <translation>System Exclusive Datei</translation>
     </message>
     <message>
         <location filename="../src/extracontrols.cpp" line="234"/>
         <source>System Exclusive (*.syx)</source>
-        <translation type="unfinished"></translation>
+        <translation></translation>
     </message>
     <message>
         <location filename="../src/extracontrols.ui" line="14"/>
@@ -124,12 +124,12 @@ p, li { white-space: pre-wrap; }
     <message>
         <location filename="../src/extracontrols.ui" line="166"/>
         <source>Button Ctl</source>
-        <translation type="unfinished"></translation>
+        <translation>Sendeknopf Einzelcontroller</translation>
     </message>
     <message>
         <location filename="../src/extracontrols.ui" line="171"/>
         <source>Button SysEx</source>
-        <translation type="unfinished"></translation>
+        <translation>Sendeknopf SysEx</translation>
     </message>
     <message>
         <location filename="../src/extracontrols.ui" line="195"/>
@@ -175,17 +175,17 @@ p, li { white-space: pre-wrap; }
     <message>
         <location filename="../src/extracontrols.ui" line="422"/>
         <source>value:</source>
-        <translation type="unfinished"></translation>
+        <translation>Wert:</translation>
     </message>
     <message>
         <location filename="../src/extracontrols.ui" line="456"/>
         <source>File name:</source>
-        <translation type="unfinished"></translation>
+        <translation>Zu sendende Datei:</translation>
     </message>
     <message>
         <location filename="../src/extracontrols.ui" line="473"/>
         <source>...</source>
-        <translation type="unfinished"></translation>
+        <translation></translation>
     </message>
 </context>
 <context>
@@ -1214,87 +1214,87 @@ p, li { white-space: pre-wrap; }
     <message>
         <location filename="../src/preferences.ui" line="278"/>
         <source>Drums Channel</source>
-        <translation type="unfinished"></translation>
+        <translation>Drumkit Kanal</translation>
     </message>
     <message>
         <location filename="../src/preferences.ui" line="289"/>
         <source>None</source>
-        <translation type="unfinished"></translation>
+        <translation>Kein Kanal</translation>
     </message>
     <message>
         <location filename="../src/preferences.ui" line="294"/>
         <source>1</source>
-        <translation type="unfinished"></translation>
+        <translation></translation>
     </message>
     <message>
         <location filename="../src/preferences.ui" line="299"/>
         <source>2</source>
-        <translation type="unfinished"></translation>
+        <translation></translation>
     </message>
     <message>
         <location filename="../src/preferences.ui" line="304"/>
         <source>3</source>
-        <translation type="unfinished"></translation>
+        <translation></translation>
     </message>
     <message>
         <location filename="../src/preferences.ui" line="309"/>
         <source>4</source>
-        <translation type="unfinished"></translation>
+        <translation></translation>
     </message>
     <message>
         <location filename="../src/preferences.ui" line="314"/>
         <source>5</source>
-        <translation type="unfinished"></translation>
+        <translation></translation>
     </message>
     <message>
         <location filename="../src/preferences.ui" line="319"/>
         <source>6</source>
-        <translation type="unfinished"></translation>
+        <translation></translation>
     </message>
     <message>
         <location filename="../src/preferences.ui" line="324"/>
         <source>7</source>
-        <translation type="unfinished"></translation>
+        <translation></translation>
     </message>
     <message>
         <location filename="../src/preferences.ui" line="329"/>
         <source>8</source>
-        <translation type="unfinished"></translation>
+        <translation></translation>
     </message>
     <message>
         <location filename="../src/preferences.ui" line="334"/>
         <source>9</source>
-        <translation type="unfinished"></translation>
+        <translation></translation>
     </message>
     <message>
         <location filename="../src/preferences.ui" line="339"/>
         <source>10</source>
-        <translation type="unfinished"></translation>
+        <translation></translation>
     </message>
     <message>
         <location filename="../src/preferences.ui" line="344"/>
         <source>11</source>
-        <translation type="unfinished"></translation>
+        <translation></translation>
     </message>
     <message>
         <location filename="../src/preferences.ui" line="349"/>
         <source>12</source>
-        <translation type="unfinished"></translation>
+        <translation></translation>
     </message>
     <message>
         <location filename="../src/preferences.ui" line="354"/>
         <source>13</source>
-        <translation type="unfinished"></translation>
+        <translation></translation>
     </message>
     <message>
         <location filename="../src/preferences.ui" line="359"/>
         <source>14</source>
-        <translation type="unfinished"></translation>
+        <translation></translation>
     </message>
     <message>
         <location filename="../src/preferences.ui" line="364"/>
         <source>15</source>
-        <translation type="unfinished"></translation>
+        <translation></translation>
     </message>
     <message>
         <source>Change the knob buttons style, either using the custom look or revert to the style selected in qtconfig.</source>
@@ -1739,7 +1739,7 @@ p, li { white-space: pre-wrap; }
     <message>
         <location filename="../src/vpiano.ui" line="388"/>
         <source>N&amp;ote Names</source>
-        <translation type="unfinished"></translation>
+        <translation>Noten-Namen</translation>
     </message>
     <message>
         <source>Load...</source>
